[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "This is a test Python package to learn python package creation process. This package includes simple functions operates on text file in Python."
authors = ["Steven Lio"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
